--- a/part1/slides.html
+++ b/part1/slides.html
@@ -104,13 +104,13 @@ z += 3
 ```
 --
 ```python
-a = 'word'
-b = a + 's'
-c = 2 * a
+text = 'word'
+texts = text + 's'
+two_text = 2 * a
 ```
 --
 ```python
-x = y = 0
+vx = vy = 0
 ```
 
 ---
@@ -343,7 +343,7 @@ a = [1, 3, 5]
 i = 2
 if a[i] == 3:
 	print("Found 3")
-elif:
+elif 3 in a:
 	print("Not a 3, but it is there... somewhere.")
 else:
 	print("No 3 in a")
