Add repl.it link

--- a/part1/slides.html
+++ b/part1/slides.html
@@ -61,6 +61,8 @@ Try out a few operators:
 * `1j ** 2`
 * `'Hello' + ' World!'`
 
+If you don't have local access to Python 3, try https://repl.it/N6pu/latest
+
 ???
 
 Prints the return value of the last expression
@@ -71,7 +73,7 @@ Difference between python 2 and 3 regarding division
 
 --
 
-There are more user-friendly Python REPLs than the default, such as *IPython* (https://ipython.readthedocs.io/):
+IPython (https://ipython.readthedocs.io/):
 
 * syntax highlighting
 * tab completion
